projects/validation/src/java/org/springmodules/validation/valang/parser/ValangParser.java
/* Generated By:JavaCC: Do not edit this line. ValangParser.java */
package org.springmodules.validation.valang.parser;

import java.math.BigDecimal;
import java.util.ArrayList;
import java.util.Collection;

import org.apache.commons.collections.Predicate;
import org.apache.commons.collections.functors.AndPredicate;
import org.apache.commons.collections.functors.NotPredicate;
import org.apache.commons.collections.functors.OrPredicate;
import org.apache.commons.logging.Log;
import org.apache.commons.logging.LogFactory;
import org.springframework.util.StringUtils;
import org.springmodules.validation.util.date.DateParseException;
import org.springmodules.validation.valang.functions.AddFunction;
import org.springmodules.validation.valang.functions.BeanPropertyFunction;
import org.springmodules.validation.valang.functions.DateLiteralFunction;
import org.springmodules.validation.valang.functions.DivideFunction;
import org.springmodules.validation.valang.functions.Function;
import org.springmodules.validation.valang.functions.LiteralFunction;
import org.springmodules.validation.valang.functions.ModuloFunction;
import org.springmodules.validation.valang.functions.MultiplyFunction;
import org.springmodules.validation.valang.functions.SubtractFunction;
import org.springmodules.validation.valang.functions.TargetBeanFunction;
import org.springmodules.validation.valang.predicates.BasicValidationRule;
import org.springmodules.validation.valang.predicates.Operator;
import org.springmodules.validation.valang.predicates.OperatorConstants;

public class ValangParser implements ValangParserConstants {
        private static Log log = LogFactory.getLog(ValangParser.class);

        private DefaultVisitor visitor = new DefaultVisitor();

        public DefaultVisitor getVisitor() {
           if (this.visitor == null) {
               throw new IllegalStateException("Visistor is not set on parser");
           }
           return this.visitor;
        }

        public void setVisitor(DefaultVisitor visitor) {
            this.visitor = visitor;
        }

        private String replace(String s) {
                String tmpS = s;

                tmpS = StringUtils.replace(tmpS, "\\'", "'");
                tmpS = StringUtils.replace(tmpS, "\\n", "\n");
                tmpS = StringUtils.replace(tmpS, "\\r", "\r");
                tmpS = StringUtils.replace(tmpS, "\\t", "\t");
                tmpS = StringUtils.replace(tmpS, "\\b", "\b");
                tmpS = StringUtils.replace(tmpS, "\\f", "\f");
                tmpS = StringUtils.replace(tmpS, "\\\\", "\\");

                return tmpS;
        }

  final public Predicate parseExpression() throws ParseException {
        Predicate predicate = null;
        Function targetBeanFunction = new TargetBeanFunction();
    predicate = predicates(targetBeanFunction);
    jj_consume_token(0);
                                                           {if (true) return predicate;}
    throw new Error("Missing return statement in function");
  }

  final public Collection parseValidation() throws ParseException {
        Predicate predicate = null;
        Collection rules = new ArrayList();
        String message = null;
        String field = null;
        String errorKey = null;
        Collection errorArgs = null;
        Function function = null;
        Function fieldFunction = null;
    label_1:
    while (true) {
      jj_consume_token(52);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION_NAME:
        jj_consume_token(FUNCTION_NAME);
        break;
      case PATH:
        jj_consume_token(PATH);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                field = token.image;
                                fieldFunction = new BeanPropertyFunction(field);
                                /* MOD-26: re-initiliaze error key and arguments to null for every rule.
				   kudos to Cesar Ordinana for reporting this bug. */
                                errorKey = null;
                                errorArgs = new ArrayList();
      jj_consume_token(53);
      predicate = predicates(fieldFunction);
      jj_consume_token(53);
      jj_consume_token(STRING);
                                   message = token.image.substring(1, token.image.length() - 1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        jj_consume_token(53);
        jj_consume_token(STRING);
                                           errorKey = token.image.substring(1, token.image.length() - 1);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 53:
          jj_consume_token(53);
          label_2:
          while (true) {
            if (jj_2_1(2)) {
              ;
            } else {
              break label_2;
            }
            function = function(fieldFunction);
                                                                                     errorArgs.add(function);
            jj_consume_token(54);
          }
          function = function(fieldFunction);
                                                                             errorArgs.add(function);
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(55);
                        /* JIRA-MOD-20: take into account error key and error args for localization, kudos to Cesar Ordinana. */
                        rules.add(new BasicValidationRule(field, predicate, errorKey, message, errorArgs));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
                {if (true) return rules;}
    throw new Error("Missing return statement in function");
  }

  final public Predicate not(Function fieldFunction) throws ParseException {
        Predicate predicate = null;
    jj_consume_token(NOT);
    predicate = expression(fieldFunction);
                                                      {if (true) return NotPredicate.getInstance(predicate);}
    throw new Error("Missing return statement in function");
  }

  final public Predicate predicates(Function fieldFunction) throws ParseException {
        Predicate predicate1 = null;
        Predicate predicate2 = null;
        boolean andTest = false;
        boolean orTest = false;
    predicate1 = expression(fieldFunction);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        jj_consume_token(AND);
                                          andTest = true;
        break;
      case OR:
        jj_consume_token(OR);
                                          orTest = true;
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      predicate2 = expression(fieldFunction);
                                if (andTest) {
                                        predicate1 = AndPredicate.getInstance(predicate1, predicate2);
                                        andTest = false;
                                } else if (orTest) {
                                        predicate1 = OrPredicate.getInstance(predicate1, predicate2);
                                        orTest = false;
                                }
    }
                {if (true) return predicate1;}
    throw new Error("Missing return statement in function");
  }

  final public Predicate expression(Function fieldFunction) throws ParseException {
        Predicate predicate = null;
    if (jj_2_2(2147483647)) {
      jj_consume_token(56);
      predicate = predicates(fieldFunction);
      jj_consume_token(57);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        predicate = not(fieldFunction);
        break;
      case TRUE:
      case FALSE:
      case NUM:
      case STRING:
      case DATE:
      case FUNCTION_NAME:
      case PATH:
      case 56:
      case 59:
      case 60:
        predicate = predicate(fieldFunction);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                {if (true) return predicate;}
    throw new Error("Missing return statement in function");
  }

  final public Predicate predicate(Function fieldFunction) throws ParseException {
        Function leftFunction = null;
        Function rightFunction1 = null;
        Function rightFunction2 = null;
        Function tmpFunction = null;
        Operator operator = null;
        boolean notBetween = false;
        boolean notIn = false;
        Collection functions = new ArrayList();
        boolean collectionProperty = false;
    leftFunction = additiveExpr(fieldFunction);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IS_NULL:
    case IS_NOT_NULL:
    case HAS_TEXT:
    case HAS_NO_TEXT:
    case HAS_LENGTH:
    case HAS_NO_LENGTH:
    case IS_BLANK:
    case IS_NOT_BLANK:
    case IS_UPPER_CASE:
    case IS_NOT_UPPER_CASE:
    case IS_LOWER_CASE:
    case IS_NOT_LOWER_CASE:
    case IS_WORD:
    case IS_NOT_WORD:
    case MORE_THAN_OR_EQUAL:
    case MORE_THAN:
    case LESS_THAN_OR_EQUAL:
    case LESS_THAN:
    case NOT_EQUAL:
    case EQUALS:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MORE_THAN_OR_EQUAL:
      case MORE_THAN:
      case LESS_THAN_OR_EQUAL:
      case LESS_THAN:
      case NOT_EQUAL:
      case EQUALS:
        operator = binaryOperator();
        rightFunction1 = additiveExpr(fieldFunction);
        break;
      case IS_NULL:
      case IS_NOT_NULL:
      case HAS_TEXT:
      case HAS_NO_TEXT:
      case HAS_LENGTH:
      case HAS_NO_LENGTH:
      case IS_BLANK:
      case IS_NOT_BLANK:
      case IS_UPPER_CASE:
      case IS_NOT_UPPER_CASE:
      case IS_LOWER_CASE:
      case IS_NOT_LOWER_CASE:
      case IS_WORD:
      case IS_NOT_WORD:
        operator = unaryOperator();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                        {if (true) return getVisitor().getPredicate(leftFunction, operator, rightFunction1, 0, 0);}
      break;
    case BETWEEN:
    case NOT_BETWEEN:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BETWEEN:
        jj_consume_token(BETWEEN);
        break;
      case NOT_BETWEEN:
        jj_consume_token(NOT_BETWEEN);
                                                              notBetween = true;
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rightFunction1 = additiveExpr(fieldFunction);
      jj_consume_token(AND);
      rightFunction2 = additiveExpr(fieldFunction);
                                        if (notBetween) {
                                                {if (true) return getVisitor().getPredicate(leftFunction, OperatorConstants.NOT_BETWEEN_OPERATOR, new LiteralFunction(new Function[] { rightFunction1, rightFunction2 }), 0, 0);}
                                        } else {
                                                {if (true) return getVisitor().getPredicate(leftFunction, OperatorConstants.BETWEEN_OPERATOR, new LiteralFunction(new Function[] { rightFunction1, rightFunction2 }), 0, 0);}
                                        }
      break;
    case IN:
    case NOT_IN:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
        jj_consume_token(IN);
        break;
      case NOT_IN:
        jj_consume_token(NOT_IN);
                                                    notIn = true;
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case NUM:
      case STRING:
      case DATE:
      case FUNCTION_NAME:
      case PATH:
      case 56:
      case 59:
      case 60:
        label_4:
        while (true) {
          if (jj_2_3(2)) {
            ;
          } else {
            break label_4;
          }
          tmpFunction = additiveExpr(fieldFunction);
                                                                                            functions.add(tmpFunction);
          jj_consume_token(54);
        }
        tmpFunction = additiveExpr(fieldFunction);
                                                                                    functions.add(tmpFunction);
        break;
      case 58:
        jj_consume_token(58);
        tmpFunction = beanProperty(fieldFunction);
                                                                                        collectionProperty = true;
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                        if (!collectionProperty) {
                                                tmpFunction = new LiteralFunction(functions);
                                        }
                                        if (notIn) {
                                                {if (true) return getVisitor().getPredicate(leftFunction, OperatorConstants.NOT_IN_OPERATOR, tmpFunction, 0, 0);}
                                        } else {
                                                {if (true) return getVisitor().getPredicate(leftFunction, OperatorConstants.IN_OPERATOR, tmpFunction, 0, 0);}
                                        }
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Function function(Function fieldFunction) throws ParseException {
    String function = null;
    Function leftFunction = null;
    Function rightFunction = null;
    int line = 0;
    int column = 0;
    Collection functionArguments = new ArrayList();
    if (jj_2_4(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 59:
        jj_consume_token(59);
        break;
      case FUNCTION_NAME:
        jj_consume_token(FUNCTION_NAME);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          function = token.image; line = token.beginLine; column = token.beginColumn;
      jj_consume_token(56);
      leftFunction = function(fieldFunction);
                                                         functionArguments.add(leftFunction);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 54:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(54);
        leftFunction = function(fieldFunction);
                                                                 functionArguments.add(leftFunction);
      }
      jj_consume_token(57);
          leftFunction = getVisitor().getFunction(function, (Function[])functionArguments.toArray(new Function[functionArguments.size()]), line, column);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case NUM:
      case STRING:
      case DATE:
      case FUNCTION_NAME:
      case PATH:
        leftFunction = beanPropertyOrLiteral(fieldFunction);
        break;
      case 60:
        jj_consume_token(60);
              leftFunction = fieldFunction;
        break;
      case 56:
        jj_consume_token(56);
        leftFunction = additiveExpr(fieldFunction);
        jj_consume_token(57);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return leftFunction;}
    throw new Error("Missing return statement in function");
  }

  final public Function additiveExpr(Function fieldFunction) throws ParseException {
        Function leftFunction = null;
        Function rightFunction = null;
        int line = 0;
        int column = 0;
    leftFunction = subtractiveExpr(fieldFunction);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(ADD);
                        line = token.beginLine; column = token.beginColumn;
      rightFunction = subtractiveExpr(fieldFunction);
                                                                                                                               leftFunction = new AddFunction(leftFunction, rightFunction, line, column);
    }
                {if (true) return leftFunction;}
    throw new Error("Missing return statement in function");
  }

  final public Function subtractiveExpr(Function fieldFunction) throws ParseException {
        Function leftFunction = null;
        Function rightFunction = null;
        int line = 0;
        int column = 0;
    leftFunction = multiplicativeExpr(fieldFunction);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUBTRACT:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(SUBTRACT);
                             line = token.beginLine; column = token.beginColumn;
      rightFunction = multiplicativeExpr(fieldFunction);
                                                                                                                                       leftFunction = new SubtractFunction(leftFunction, rightFunction, line, column);
    }
                {if (true) return leftFunction;}
    throw new Error("Missing return statement in function");
  }
